...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addItemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Item"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Checkout"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
...
